tests/ui/proc-macro/quote/not-repeatable.stderr
error: proc macro panicked
  --> $DIR/not-repeatable.rs:15:13
   |
LL |     let _ = quote! { $($ip)* };
   |             ^^^^^^^^^^^^^^^^^^
   |
   = help: message: `$` must be followed by an ident or `$` in `quote!`

error: aborting due to 1 previous error

